theme.css
/* ... */
button:not(.clickable-icon):focus,
button:not(.clickable-icon).mod-cta:focus,
.sync-history-load-more-button:focus ,
.empty-state-action:focus,
.is-mobile .document-search .document-search-button:focus,
.is-mobile .document-replace .document-search-button:focus {
  box-shadow: 0 0 0 3px var(--background-modifier-border-focus);
}

/* Buttons - regular but small */
button.search-result-file-match-replace-button {
  min-height: auto;
}

/* Buttons - lower visual weight */
.search-result-file-match-destination-file {
  border: none;
  box-shadow: var(--theme-shadow-control);
  background-color: var(--theme-color-controlBgLowWeight);
}
.search-result-file-match:hover .search-result-file-match-destination-file:hover {
  border: none;
  background: var(--theme-color-controlBgHover);
  color: var(--theme-color-controlTextHover);
}
.search-result-file-match-destination-file:focus {
    box-shadow: 0 0 0 3px var(--background-modifier-border-focus);
    outline: none;
}
.search-result-file-match:hover .search-result-file-match-destination-file:hover .search-result-file-match-destination-file-icon {
  color: var(--theme-color-controlTextHover);
}

/* Selects – regular */
select,
.setting-item-control select {
  border: none;
  box-shadow: var(--theme-shadow-control);
  background-color: var(--theme-color-controlBg);
}
select:hover,
.setting-item-control select:hover {
  border: none;
  background: var(--theme-color-controlBgHover);
  color: var(--theme-color-controlTextHover);
}
select:focus,
.dropdown:focus {
    box-shadow: 0 0 0 3px var(--background-modifier-border-focus);
    outline: none;
}

/* Selects – lower visual weight */
.search-results-info .dropdown {
  border: none;
  box-shadow: var(--theme-shadow-control);
  background-color: var(--theme-color-controlBgLowWeight);
}
.search-results-info .dropdown:hover {
  border: none;
  background: var(--theme-color-controlBgHover);
  color: var(--theme-color-controlTextHover);
}
.search-results-info .dropdown:focus {
    box-shadow: 0 0 0 3px var(--background-modifier-border-focus);
    outline: none;
}


/* Multi-select pill */
.multi-select-container,
.metadata-property .multi-select-container {
  padding: 0.25em;
}
.multi-select-pill {
  padding: var(--pill-padding-y) var(--pill-padding-x);
}
.multi-select-pill-remove-button {
  margin: 0;
  border-radius: 100%;
}
.multi-select-pill-remove-button:hover {
  background: var(--pill-background-remove-hover);
}

/* Toolbars */
.canvas-controls,
.graph-controls,
.graph-controls.is-close,
.graph-controls:not(.is-close),
.canvas-card-menu,
.canvas-menu,
.canvas-submenu {
  background: var(--theme-color-controlSetBg);
  border: none;
  padding: 0.25rem;
  gap: 0;
  box-shadow: var(--theme-shadow-input);
  border-radius: 0.5rem;
}
.canvas-control-item,
.graph-controls-button,
.canvas-card-menu .canvas-card-menu-button {
  --icon-size: var(--icon-s);
  --icon-stroke: var(--icon-s-stroke-width);
  border-radius: var(--clickable-icon-radius);
  color: var(--theme-color-control);
  opacity: var(--icon-opacity);
  background-color: transparent;
  border: none;
}
.canvas-control-item:hover,
.graph-controls-button:not(.mod-close):hover,
.canvas-card-menu .canvas-card-menu-button:hover {
  color: var(--theme-color-controlHover);
  background-color: var(--background-modifier-hover);
}

/* Collapsible controls */
.metadata-properties-heading,
.embedded-backlinks .backlink-pane .tree-item-self,
.graph-controls .graph-control-section .tree-item-self,
.mod-collapsible,
.search-result-file-title {
  align-items: flex-start;
  border-radius: var(--radius-s);
  color: var(--text-faint);
  font-size: var(--nav-item-size);
  font-weight: var(--font-medium);
  gap: 0;
  margin: 0;
  padding: 0.25em 0.5em;
  line-height: var(--theme-lineHeight-tight);
  display: flex;
}
.metadata-properties-heading:hover,
.embedded-backlinks .backlink-pane .tree-item-self:hover,
.graph-controls .graph-control-section .tree-item-self:hover,
.mod-collapsible:hover,
.search-result-file-title:hover {
  color: var(--nav-item-color-hover);
  background-color: var(--nav-item-background-hover);
  font-weight: var(--font-medium);
}
.metadata-properties-heading .collapse-indicator,
.embedded-backlinks .backlink-pane .tree-item-self .collapse-icon,
.graph-controls .graph-control-section .collapse-icon,
.tree-item-self .tree-item-icon.collapse-icon {
  color: var(--theme-color-control);
  display: flex;
  left: inherit;
  opacity: var(--icon-opacity);
  padding: 0;
  position: relative;
  width: var(--size-4-4);
  margin: 0;
  align-items: center;
  justify-content: flex-start;
}
.metadata-properties-heading .metadata-properties-title,
.embedded-backlinks .backlink-pane .tree-item-self .tree-item-inner,
.graph-controls .graph-control-section .tree-item-inner {
  font-size: var(--font-ui-smaller);
  font-weight: var(--font-medium);
  padding: 0;
}
.metadata-properties-heading:hover .collapse-indicator svg.svg-icon,
.embedded-backlinks .backlink-pane .tree-item-self:hover .collapse-icon svg.svg-icon,
.graph-controls .graph-control-section .tree-item-self:hover .collapse-icon svg.svg-icon,
.mod-collapsible:hover .collapse-icon svg.svg-icon,
.search-result-file-title:hover .collapse-icon svg.svg-icon,
.tree-item-self:hover .tree-item-icon.collapse-icon svg.svg-icon,
.tree-item-self:hover .menu-item-icon svg.svg-icon {
  color: var(--theme-color-controlHover);
}
.backlink-pane > .tree-item-self .collapse-icon,
.outgoing-link-pane > .tree-item-self .collapse-icon {
  display: block;
  margin-left: 0;
  position: relative;
}
.metadata-properties-heading .collapse-indicator svg,
.embedded-backlinks .backlink-pane .tree-item-self .tree-item-icon svg,
.graph-controls .graph-control-section .collapse-icon svg {
  color: var(--theme-color-control);
}
.metadata-content,
.embedded-backlinks .backlink-pane .search-result-container,
.graph-control-section .tree-item-children {
  margin: 0 1em 1em 1em;
  font-size: var(--font-ui-small);
}
/* ... */

